Added instrumation model
